--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "scss-loader": "^0.0.1",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
+    "vue-cropper": "^0.2.3",
     "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.2",
