--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-cropper": "^0.2.3",
+    "vue-infinite-loading": "^2.2.1",
     "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.2",
